Webpack implementation and configuration, plus build out for all the new webpack constructor work

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <script type="text/javascript" src="node_modules/dc/dist/dc.min.js"></script>
 
 
-<script type="text/javascript" src="compare.js?a=33934"></script>
+<script type="text/javascript" src="compare-rebuild/dist/main.js?a=33934"></script>
 <script type="text/javascript" src="web/js/MultiRowSelector.jquery.js"></script>
 
 <script src="web/js/Utility.js"></script>
