--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <!--<script type="text/javascript" src="web/js/vue.js"></script>-->
 
 
+
 <div class="container" id="app">
 
     <div class="left_side"></div>
@@ -91,7 +92,12 @@
 
 </div>
 
-<div id="compare_bottom_outer"></div>
+
+<div id="compare_bottom_outer">
+    <bluecomp></bluecomp>
+    <redcomp></redcomp>
+</div>
+
 
 <div id="tooltip"></div>
 <div class="spinner_loader"></div>
