--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 </head>
 <body>
 
+
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="node_modules/vue/dist/vue.global.js"></script>
-<!--<script type="text/javascript" src="web/js/vue.js"></script>-->
+
+
+<!-- OLD <script type="text/javascript" src="web/js/vue.js"></script>-->
 
 
 
@@ -119,7 +122,7 @@
 <script type="text/javascript" src="node_modules/dc/dist/dc.min.js"></script>
 
 
-<script type="text/javascript" src="compare-rebuild/dist/main.js?a=33934"></script>
+<script type="text/javascript" src="dist/main.js?a=33934"></script>
 <script type="text/javascript" src="web/js/MultiRowSelector.jquery.js"></script>
 
 <script src="web/js/Utility.js"></script>
