upgrade memory viz page to use the new node_modules

--- a/memory/index.html
+++ b/memory/index.html
@@ -24,13 +24,11 @@
 <div id="memory-chart"></div>
 <div id="volume-chart"></div>
 
-<script src="../web/js/jquery-1.11.0.min.js"></script>
-<script src="../web/js/vue.js"></script>
-
-
-<script type="text/javascript" src="../web/js/d3.js"></script>
-<script type="text/javascript" src="../web/js/crossfilter.js"></script>
-<script type="text/javascript" src="../web/js/dc.js"></script>
+<script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="../node_modules/vue/dist/vue.global.js"></script>
+<script type="text/javascript" src="../node_modules/d3/dist/d3.min.js"></script>
+<script type="text/javascript" src="../node_modules/crossfilter2/crossfilter.min.js"></script>
+<script type="text/javascript" src="../node_modules/dc/dist/dc.min.js"></script>
 
 
 <script type="text/javascript" src="js/plotly-latest.min.js"></script>
