scss to css refactor plus fixes for web/img

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" type="text/css" href="web/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="web/css/dc.css"/>
+    <link rel="stylesheet" type="text/css" href="css_dist/Whole.css"/>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
     <style>
